--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=JobApp
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 debug=true
+spring.datasource.url=jdbc:mysql://localhost:3306/jobapp
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
